# image_qa

./: _settings.json  app.py  pyinstaller.spec  pyproject.toml  run.py  run_main_window.py
.github/workflows/: ci-cd.yml
helloworld/: __init__.py
tests/: test_hello.py
utils/: webservice.py
