[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "hello world usign poetry and CD/CI using GitHub actions"
authors = ["jinkoo kim <jinkoo2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
